# pJITAI-python

./: .gitignore  LICENSE.md  README.md  data_generator.py  decision.csv  pyproject.toml  requirements.txt  simulator.py  update.csv
cloud/: README.md  requirements.txt
cloud/app/: __init__.py  prestart.sh
cloud/app/main/: __init__.py  config.py
cloud/app/main/controller/: learning_task_controller.py
cloud/app/main/learning_models/: bandit.py  dummy.py
cloud/app/main/model/: learning_task.py
cloud/app/main/service/: learning_model_service.py  learning_task_service.py
cloud/app/main/util/: LearningModelBase.py  dto.py
cloud/legacy_code/: manage.py
cloud/legacy_code/app/: wsgi.py
cloud/legacy_code/app/main/controller/: learning_model_controller.py
cloud/notes/: thompson_sampling_example.json
mobile/: README.md
python/: README.md  requirements.txt  rl_example.py  setup.py  simulator.py  tests.py  update.csv  upload.csv
python/mdot_reinforcement_learning/: __init__.py  codes.py  datatypes.py  exceptions.py  reinforcement_learning.py  util.py
python/mdot_rl_interface/: __init__.py  codes.py  datatypes.py  exceptions.py  interface.py  util.py
src/mDOT_pJITAI.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/pJITAI/: README  __init__.py  client.py  codes.py  datatypes.py  util.py
tests/: test_simulation.py
