[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pJITAI"
version = "1.0.1"
description = "The mHealth Center for Discovery, Optimization & Translation of Temporally-Precise Intervention tookbox for personalized Just-In-Time Adaptive Interventions"
readme = "README.md"
authors = [{ name = "mDOT Center", email = "dev@md2k.org"}]
license = { file = "LICENSE.md"}
classifiers = [
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
keywords = ["mHealth", "mDOT", "JITAI", "Reinforcement Learning"]
dependencies = [
    "typing",
    "dataclasses",
    "requests",
    "responses"
]
requires-python = ">=3.10"

[project.optional-dependencies]
dev = ["bumpver", "isort", "pip-tools"]

[project.urls]
Homepage = "https://github.com/mDOT-Center/pJITAI-python"

[tool.bumpver]
current_version = "1.0.1"
version_pattern = "MAJOR.MINOR.PATCH"
commit_message = "Bump version {old_version} -> {new_version}"
commit = true
tag = true
push = false

[tool.bumpver.file_patterns]
"pyproject.toml" = [
    'current_version = "{version}"',
    'version = "{version}"',
]
"src/pJITAI/__init__.py" = [
    "{version}"
]
